# docs/swagger.json
@@ -1,12 +1,17 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a URL shortener API.\nIt allows you to shorten long URLs and retrieve the original URL using the shortened version.",
+        "title": "Shortener URL - API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/",
     "paths": {
         "/api/shorten": {
             "post": {
-                "description": "Recebe uma URL longa e retorna uma versão encurtada.",
+                "description": "Receives a long URL and returns a shortened version.",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,15 +21,15 @@
                 "tags": [
                     "URLs"
                 ],
-                "summary": "Encurtar URL",
+                "summary": "Shorten a URL",
                 "parameters": [
                     {
-                        "description": "URL para encurtar",
+                        "description": "URL",
                         "name": "url",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.URL"
+                            "$ref": "#/definitions/dto.ShortenRequest"
                         }
                     }
                 ],
@@ -32,10 +37,7 @@
                     "200": {
                         "description": "Response with shorter URL",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/dto.ShortenResponse"
                         }
                     }
                 }
@@ -43,19 +45,24 @@
         }
     },
     "definitions": {
-        "entity.URL": {
+        "dto.ShortenRequest": {
+            "type": "object",
+            "required": [
+                "url"
+            ],
+            "properties": {
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.ShortenResponse": {
             "type": "object",
             "properties": {
-                "createdAt": {
+                "short_id": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "string"
-                },
-                "original": {
-                    "type": "string"
-                },
-                "shortID": {
+                "short_url": {
                     "type": "string"
                 }
             }
